--- a/client/client/index.html
+++ b/client/client/index.html
@@ -29,8 +29,10 @@
     <div id="chats"></div>
 
     <script>
-      $(function(){
+      $(function() {
         app.init()
       });
-    </script>  </body>
+
+    </script>
+    </body>
 </html>
